# ghetto

./: .gitignore  .gitmodules  AUTHORS  ChangeLog  NEWS  README  README.md  ROADMAP  configure.ac
ghetto/: autogen.sh  configure.ac  configure.in
ghetto/src/: Makefile.am
src/: Makefile.am  computer.cpp  computer.h  ghetto.cpp  ghettod.cpp  json.cpp  json.h  mainmenu.cpp  mainmenu.h  neighbors.cpp  neighbors.h
src/ghetto/: Makefile.am  ghetto.cpp
src/ghettod/: Makefile.am  ghettod.cpp
src/jsoncons/: json1.hpp
src/submodules/: README
test/: netinfo.json
tools/: valgrind-client-ghetto.sh  valgrind-ghettod.sh  valgrind-server-ghetto.sh
